--- a/instrument-service/pom.xml
+++ b/instrument-service/pom.xml
@@ -134,6 +134,14 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
+        <!-- S3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.31.77</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
