--- a/instrument-service/src/main/resources/application.yaml
+++ b/instrument-service/src/main/resources/application.yaml
@@ -23,6 +23,12 @@ spring:
         offsets.topic.replication.factor: 1
         transaction.state.log.replication.factor: 1
         transaction.state.log.min.isr: 1
+s3:
+  key_id: ${S3_KEY_ID}
+  secret_key: ${S3_SECRET_KEY}
+  region: ru-central1
+  endpoint: https://storage.yandexcloud.net
+  bucket: wolfstreet
 security:
   jwt:
     secret_key: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
