--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -140,6 +140,13 @@
             <artifactId>kafka-protobuf-serializer</artifactId>
             <version>8.0.0</version>
         </dependency>
+        <!-- S3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.31.77</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
