--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -41,4 +41,4 @@ spec:
               service:
                 name: instrument-service
                 port:
-                  8091
+                  number: 8091
