--- a/analytic-service/pom.xml
+++ b/analytic-service/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>mapstruct</artifactId>
             <version>1.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
