--- a/analytic-service/src/main/resources/application.yaml
+++ b/analytic-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: analytic-service
   datasource:
-    url: jdbc:clickhouse://localhost:8123/default?compress=0
+    url: jdbc:clickhouse://localhost:8123/analytic_wolfstreet
     username: default
     password: "123"
     driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
